--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -19,17 +19,9 @@
             android:icon="@drawable/ic_menu_cart"
             android:title="Giỏ hàng" />
         <item
-            android:id="@+id/nav_location"
-            android:icon="@drawable/ic_menu_location"
-            android:title="Địa điểm" />
-        <item
-            android:id="@+id/nav_social"
-            android:icon="@drawable/ic_menu_social"
-            android:title="Mạng xã hội" />
-        <item
-            android:id="@+id/nav_about"
-            android:icon="@drawable/ic_menu_about"
-            android:title="Về chúng tôi" />
+            android:id="@+id/nav_logout"
+            android:icon="@drawable/ic_menu_logout"
+            android:title="Đăng xuất" />
 
     </group>
 
