fix bug dang nhap, dang ky

--- a/app/src/main/res/layout/activity_dang_ky.xml
+++ b/app/src/main/res/layout/activity_dang_ky.xml
@@ -97,6 +97,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/colorWhite"
+            android:inputType="number"
             android:hint="@string/cmnd"
             android:padding="@dimen/size10dp"
             android:drawableLeft="@drawable/id_card"
