update menu bar

--- a/app/src/main/res/layout/activity_dang_nhap.xml
+++ b/app/src/main/res/layout/activity_dang_nhap.xml
@@ -51,7 +51,7 @@
             android:drawableLeft="@drawable/lock"
             android:drawablePadding="@dimen/size10dp"
             android:singleLine="true"
-            android:hint="@string/tendangnhap"
+            android:hint="@string/matkhau"
             android:padding="@dimen/size10dp"
             android:layout_marginLeft="@dimen/size10dp"
             android:layout_marginRight="@dimen/size10dp"
@@ -62,7 +62,7 @@
             android:id="@+id/btnDongyDN"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/dongy"
+            android:text="@string/dangnhap"
             android:padding="@dimen/size10dp"
             android:background="@color/colorText"
             android:layout_marginLeft="@dimen/size10dp"
