--- a/app/src/main/res/layout/activity_dang_ky.xml
+++ b/app/src/main/res/layout/activity_dang_ky.xml
@@ -121,7 +121,7 @@
                 android:id="@+id/btnThoat"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/thoat"
+                android:text="@string/dangnhap"
                 android:layout_weight="1"
                 android:layout_margin="@dimen/size20dp"/>
         </LinearLayout>
